@@ -1,5 +1,9 @@
 Changes with Apache 1.3
 
+  *) Added IconHeight and IconWidth to mod_dir's IndexOptions directive.
+     When used together, these cause mod_dir to emit HEIGHT and WIDTH
+     attributes in the FancyIndexing IMG tags.  [Ken Coar]
+
   *) Added NT support [Ben Laurie and Ambarish Malpani <ambarish@valicert.com>]
 
 Changes with Apache 1.2
